--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,12 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "Run Django server",
+			"label": "Run Django auto server",
 			"type": "shell",
 			"command": "G:/VS_code/sc_garden/.venv/Scripts/python.exe",
 			"args": [
 				"manage.py",
-				"runserver"
+				"run_auto_server"
 			],
 			"isBackground": true,
 			"problemMatcher": [],
